Commit rights tested.
git-svn-id: http://scarab-incubator.tigris.org/svn/scarab-incubator@14 c2960bf1-992c-0410-bba2-fdfcf5345efc

--- a/trunk/projects/scarab-persistent-om/pom.xml
+++ b/trunk/projects/scarab-persistent-om/pom.xml
@@ -40,6 +40,16 @@
       </roles>
       <timezone>+1</timezone>
     </developer>
+    <developer>
+      <id>jorgeuriarte</id>
+      <name>Jorge Uriarte</name>
+      <email>jorgeuriarte@tigris.org</email>
+      <url>http://omelas.net</url>
+      <roles>
+        <role>Architect</role>
+        <role>Developer</role>
+      </roles>
+    </developer>
   </developers>
   
 </project>
